--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.0",
+    "@mui/styles": "^5.4.1",
     "firebase": "^9.6.6",
     "firebase-tools": "^10.1.5",
     "next": "12.0.10",
